# srclang

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  code.src  code.src.s  lib.src  vcpkg.json
.github/workflows/: build-and-release.yml
modules/: CMakeLists.txt  io.cxx
src/: CMakeLists.txt  builtin.c  codegen.c  main.c  main.cpp  parser.c  runtime.cap  scanner.c  srclang.h  types.c
src/Builtins/: Builtin.cpp  Builtin.h
src/Compiler/: Compiler.cxx  Compiler.hxx
src/Interpreter/: Interpreter.cxx
src/Interpreter/Builtins/: Builtin.hxx
src/Language/: Language.cpp  Language.cxx
src/Value/: Value.cxx  Value.h  Value.hxx
std/: any.src  io.src  list.src
tests/: CMakeLists.txt  test.src
